[package]
name = "yew-test"
version = "0.1.0"
authors = ["Stig Johan Berggren <stigjb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.14.3", features = ["web_sys"] }
js-sys = "*"
web-sys = { version = "0.3.37", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
wasm-bindgen = "0.2.60"
itertools = "0.9.0"
lazy_static = "1.4.0"
