[package]
name = "yew-chartdraw"
version = "0.1.0"
authors = ["Norselark <norselark@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
yew = { version = "0.14.3", features = ["web_sys"] }
web-sys = "0.3.37"
wasm-bindgen = "0.2.60"
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.7"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
