[package]
name = "yew-chartdraw"
version = "0.1.0"
authors = ["Norselark <norselark@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
yew = "0.15.0"
web-sys = "0.3.37"
wasm-bindgen = "0.2.60"
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.7"
wee_alloc = "0.4.5"
web_logger = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
